feat: Add MT4/MT5 platform selection with bridge connectors
MT4 Integration:
- MT4ConnectorV3Bridge: HTTP bridge using MQL4 EA (Mac/Windows/Linux)
- MT4ConnectorV1: Python package approach
- MT4ConnectorV2FIX: FIX API approach
- mt4_bridge_server.mq4: MQL4 EA for HTTP bridge (650 lines)
- Comprehensive documentation and guides

MT5 Integration:
- MT5ConnectorBridge: HTTP bridge using MQL5 EA (Mac/Windows/Linux)
- MT5ConnectorDirect: MetaTrader5 package (Windows/Linux only)
- mt5_bridge_test.mq5: Socket compatibility test EA (200 lines)
- Router pattern for automatic implementation selection

Compatibility Fixes:
- account_utils.py: Conditional MetaTrader5 import with mock constants
- error_descriptions.py: Mock MT5 constants for macOS compatibility
- session_manager.py: Fixed logger keyword arguments (f-strings)

Platform Type Selection:
- Added platform_type field to accounts (MT4/MT5)
- Dashboard UI for platform selection
- Automatic connector routing based on platform_type

Documentation:
- MT4_INTEGRATION_GUIDE.md: Complete MT4 implementation comparison
- MT4_QUICK_START_MAC.md: 15-minute Mac setup guide
- MT4_MAC_LIMITATIONS.md: Wine socket limitations explained
- MT5_QUICK_START_MAC.md: MT5 Mac setup guide
- MT5_IMPLEMENTATION_SUMMARY.md: Technical implementation details
- MT5_SOCKET_TEST_INSTRUCTIONS.md: Step-by-step socket test

Bridge Solution Benefits:
- Works on any platform (Mac/Windows/Linux)
- No Python package restrictions
- HTTP/REST API for easy debugging
- Simple curl-testable endpoints
- Broker-agnostic

Known Limitations:
- Wine MT4: Socket functions not supported (documented)
- Wine MT5: Socket support to be tested with mt5_bridge_test.mq5
- Alternative: Windows VM, remote server, or file-based bridge

Files Added: 15 (7 Python, 2 MQL, 6 Docs)
Files Modified: 12
Total Lines: ~4,500 (Python) + ~850 (MQL) + ~2,000 (Docs)

AI-Generated: yes
AI-Tool: claude-code
AI-Model: sonnet-4.5
AI-Percent: 95
AI-Reason: Complete MT4/MT5 bridge integration + doc

--- a/dashboard/accounts.html
+++ b/dashboard/accounts.html
@@ -114,6 +114,7 @@
                         <tr>
                             <th>Status</th>
                             <th>Account</th>
+                            <th>Platform</th>
                             <th>Broker</th>
                             <th>Server</th>
                             <th>Type</th>
@@ -124,7 +125,7 @@
                     </thead>
                     <tbody id="accountsTableBody">
                         <tr class="loading-row">
-                            <td colspan="8">
+                            <td colspan="9">
                                 <div class="loading-spinner">
                                     <i class="fas fa-spinner fa-spin"></i> Loading accounts...
                                 </div>
@@ -148,52 +149,43 @@
             <form id="accountForm">
                 <input type="hidden" id="accountId" value="">
 
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="accountNumber">Account Number *</label>
-                        <input type="number" id="accountNumber" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="login">Login Number *</label>
-                        <input type="number" id="login" required>
-                    </div>
-                </div>
-
                 <div class="form-group">
                     <label for="accountName">Account Name *</label>
-                    <input type="text" id="accountName" required>
+                    <input type="text" id="accountName" required placeholder="e.g., My Trading Account">
                 </div>
 
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="broker">Broker *</label>
-                        <input type="text" id="broker" required>
+                        <label for="accountNumber">Account Number / Login *</label>
+                        <input type="number" id="accountNumber" required placeholder="12345678">
+                        <small style="color: #666; font-size: 0.85em;">Your MT4/MT5 account number</small>
                     </div>
+                    <div class="form-group">
+                        <label for="platformType">Platform *</label>
+                        <select id="platformType" required>
+                            <option value="MT5" selected>MetaTrader 5 (MT5)</option>
+                            <option value="MT4">MetaTrader 4 (MT4)</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-row">
                     <div class="form-group">
                         <label for="server">Server *</label>
-                        <input type="text" id="server" required>
+                        <input type="text" id="server" required placeholder="e.g., ICMarkets-Demo">
+                        <small style="color: #666; font-size: 0.85em;">Your broker's server name</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password *</label>
+                        <input type="password" id="password" placeholder="Account password">
+                        <small style="color: #666; font-size: 0.85em;">Leave blank when editing to keep existing</small>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" placeholder="Leave blank to keep existing">
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="initialBalance">Initial Balance</label>
-                        <input type="number" id="initialBalance" step="0.01" min="0">
-                    </div>
-                    <div class="form-group">
-                        <label for="currency">Currency</label>
-                        <input type="text" id="currency" value="USD" maxlength="10">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="description">Description</label>
-                    <textarea id="description" rows="3"></textarea>
+                    <label for="broker">Broker (Optional)</label>
+                    <input type="text" id="broker" placeholder="e.g., IC Markets">
+                    <small style="color: #666; font-size: 0.85em;">Auto-populated after first connection</small>
                 </div>
 
                 <div class="form-checkboxes">
